Yuras/webapp/public/assets/css/viewer.css
body {
	background: #eee;
	font-family: Open Sans, sans-serif;
	color: white;
	line-height: 1.2em;
	margin: 0;
	padding: 0;
}

a { 
	outline: 0 !important;
}
/* General purpose */

.pull-right {
	float: right;
}
/* Navbar */

.navbar-brand {
	-max-width: 200px;
}

#document-title-input {
	margin-top: -5px;
}

#document-title.not-saved:after {
	color: rgb(26, 188, 156);
	content: " *";
}

/* Wrapper */

.document-wrapper {
	width: 75%;
	display: inline-block;
	float: left;
	margin-top: 50px;
	z-index: 50;
	transition: width 0.5s;
	z-index: 10;
}

.annotation-wrapper {
	width: 25%;
	height: 100%;
	background: #ddd;
	display: inline-block;
	right: 0;
	top: 50px;
	bottom: initial;
	position: fixed;
	overflow: hidden;
	border-left: 1px solid #ccc;
	z-index: 100;
	transition: all 0.5s;
}

.annotation-wrapper-padding {
	padding: 5%;
	position: relative;
	height: 100%;
}

@media screen and (max-width:1200px) {
	.document-wrapper {
		width: 100%;
		padding-bottom: 25%;
	}
	.annotation-wrapper {
		width: 100%;
		height: 25%;
		top: 75%;
		bottom: 0;
		box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
	}
}

/* Document styling */

#csrf-token {
	display:none;
}

/* This element is the size of a standard A4 paper. */

.document {
	background: #fefefe;
	color: #333;
	width: 780px;
	position: relative;
	display: block;
	background: white;
	/*height: 1100px;*/
	/*max-height: 1100px;*/
	margin: 25px auto;
	border: 1px solid #cdcdcd;
}

.document-content-padding {
	padding: 75px;
}

@media screen and (max-width:766px) {
	.document {
		width: 90%;
	}
	.document-content-padding {
		padding: 10%;
	}
}

.document-body {
	outline: 0;
	font-family: "Merriweather";
	font-size: 10pt;
	line-height: 1.3em;
	font-kerning: normal;
	text-align: justify;
}
.document h1 {
	text-align: left;
}

.marked {
	background: #1abc9c;
	padding: 0.1em;
	line-height: 1.4em;
	color: white;
}

.marked.article {
	background: #337ab7;
}

/* Annotation styling */

.category-container {
	position: relative;
}

.category-dropdown {
	width: 100%;
	text-align: left;
}

.annotation-page {
	margin-bottom: 2%;
	width: 100%;
	overflow: hidden;
}
.annotation {
	padding: 5%;
	background: #1abc9c;
	margin-bottom: 15px;
	color: white;
	transition: transform 0.2s;
	transition-timing-function: linear;	
}

.annotation:hover {
	background: #1abc9c;
}
#annotation-connector {
	position: absolute;
	top: -9999px;
	left: -9999px;
	z-index: 1000;
	pointer-events: none;
	opacity: 1;
	transition: opacity 0.3s;
}

.annotation a {
	color: white;
	opacity: 0.9;
	cursor: pointer;
}

#relatedModal .modal-dialog {
	width: 1000px;
}

#relatedModal .modal-body .row {
	width: 100%;
}

.law-wrapper {
	color: #333;
	margin-top: 120px;
}

.law {
	width: 780px;
	background: white;
	text-align: justify;
	font-family: "Amiri";
}
.law-content-padding {
	padding: 75px;
}
.law ul, .law ol {
	list-style-type: none;
}
.law-body > ol {
	margin: 0;
	padding: 0;
}
.law li {
	margin-bottom: 1em;
}

